Added iconts fonts and images, completed mobile
Might add a dark mode feature, as light mode is unappealing to me

--- a/index.html
+++ b/index.html
@@ -15,15 +15,22 @@
                     srcset="./assets/images/pexels-lisa-fotios-medium.jpg">
             <source srcset="./assets/images/pexels-lisa-fotios-small.jpg">
             <img class="hero-img" src="./assets/images/pexels-lisa-fotios-small.jpg" alt="man at desk with two computer screens">
+            <h1 id="name">Wyatt Brendle</h1>
         </picture>
-        <h1>Wyatt Brendle</h1>
+
     </div>
     <div class="about-me">
         <h2>About Me</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non amet, fugit odio perferendis nam molestias quos quod labore laboriosam quae tempora perspiciatis saepe debitis minima numquam illo nostrum repellendus sit harum rem veritatis animi eius?</p>
-        <div class="about-icon-container">
+        <div class="icon-container">
             <a href="https://github.com/wwyattbrendle">
-                <img src="./assets/icons/github-original.svg" alt="" class="github-icon">
+                <img src="./assets/icons/github-original.svg" alt="" class="icon">
+            </a>
+            <a href="https://linkedin.com">
+                <img src="./assets/icons/linkedin-original.svg" alt="" class="icon">
+            </a>
+            <a href="twitter.com">
+                <img src="./assets/icons/twitter-original.svg" alt="" class="icon">
             </a>
         </div>
     </div>
@@ -31,40 +38,146 @@
         <h2>My Work</h2>
         <div id="projects-container">
             <div class="project">
-                <img src="#" alt="">
-                <h3>Project name</h3>
-                <p>short description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod inventore ab tenetur.</p>
-                <ul class="project-links">
-                    <li class="list-link">
-                        <a href="#">Live Preview</a>
-                    </li>
-                    <li class="list-link">
-                        <a href="#">View Code</a>
-                    </li>
-                </ul>
+                <img class="project-img" src="./assets/images/matrix.jpg" alt="">
+                <div class="p-content">
+                    <h3 class="project-title">Project Name</h3>
+                    <p>Short description of the project.  Just a couple of sentences will do.</p>
+                    <ul class="project-links">
+                        <li class="list-link">
+                            <a class="fake-span headers" href="#">Live Preview
+                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                            </a>    
+                        </li>
+                        <li class="list-link">
+                            <a class="fake-span headers" href="#">View Code
+                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="project"></div>
-            <div class="project"></div>
-            <div class="project"></div>
-            <div class="project"></div>
-            <div class="project"></div>
+            <div class="project">
+                <img class="project-img" src="./assets/images/matrix.jpg" alt="">
+                <div class="p-content">
+                    <h3 class="project-title">Project Name</h3>
+                    <p>Short description of the project.  Just a couple of sentences will do.</p>
+                    <ul class="project-links">
+                        <li class="list-link">
+                            <a class="fake-span headers" href="#">Live Preview
+                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                            </a>    
+                        </li>
+                        <li class="list-link">
+                            <a class="fake-span headers" href="#">View Code
+                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="project">
+                <img class="project-img" src="./assets/images/matrix.jpg" alt="">
+                <div class="p-content">
+                    <h3 class="project-title">Project Name</h3>
+                    <p>Short description of the project.  Just a couple of sentences will do.</p>
+                    <ul class="project-links">
+                        <li class="list-link">
+                            <a class="fake-span headers" href="#">Live Preview
+                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                            </a>    
+                        </li>
+                        <li class="list-link">
+                            <a class="fake-span headers" href="#">View Code
+                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="project">
+                <img class="project-img" src="./assets/images/matrix.jpg" alt="">
+                <div class="p-content">
+                    <h3 class="project-title">Project Name</h3>
+                    <p>Short description of the project.  Just a couple of sentences will do.</p>
+                    <ul class="project-links">
+                        <li class="list-link">
+                            <a class="fake-span headers" href="#">Live Preview
+                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                            </a>    
+                        </li>
+                        <li class="list-link">
+                            <a class="fake-span headers" href="#">View Code
+                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="project">
+                <img class="project-img" src="./assets/images/matrix.jpg" alt="">
+                <div class="p-content">
+                    <h3 class="project-title">Project Name</h3>
+                    <p>Short description of the project.  Just a couple of sentences will do.</p>
+                    <ul class="project-links">
+                        <li class="list-link">
+                            <a class="fake-span headers" href="#">Live Preview
+                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                            </a>    
+                        </li>
+                        <li class="list-link">
+                            <a class="fake-span headers" href="#">View Code
+                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="project">
+                <img class="project-img" src="./assets/images/matrix.jpg" alt="">
+                <div class="p-content">
+                    <h3 class="project-title">Project Name</h3>
+                    <p>Short description of the project.  Just a couple of sentences will do.</p>
+                    <ul class="project-links">
+                        <li class="list-link">
+                            <a class="fake-span headers" href="#">Live Preview
+                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                            </a>    
+                        </li>
+                        <li class="list-link">
+                            <a class="fake-span headers" href="#">View Code
+                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
     <div class="contact-me">
         <div class="contact-container">
             <h2>Contact Me</h2>
-            <div id="contact-text">
-                <p>Please ger in touch if you think our work could be mutually beneficial!</p>
-                <br>
-                <br>
+            <div class="contact-text">
+                <p class="reach-out"><strong>Please get in touch if you think our work could be mutually beneficial!</strong></p>
                 <p>1234 Address Road <br> 
                 Addresstown, State, 12345</p>
-
+                <p>123-456-7890<br>
+                notrealemail@email.com</p>
+            </div>
+            <div class="icon-container">
+                <a href="https://github.com/wwyattbrendle">
+                    <img src="./assets/icons/github-original.svg" alt="" class="icon">
+                </a>
+                <a href="https://linkedin.com">
+                    <img src="./assets/icons/linkedin-original - black.svg" alt="" class="icon">
+                </a>
+                <a href="twitter.com">
+                    <img src="./assets/icons/twitter-original - black.svg" alt="" class="icon">
+                </a>
             </div>
         </div>
-        <div class="contact-img">
-            <img src="#" alt="#">
-        </div>
+    </div>
+    <div class="contact-img">
+        <img class="contact-me-img" src="./assets/images/business-man.jpg" alt="#">
     </div>
 </body>
 </html>
