Added to tablet view

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             <img class="hero-img" src="./assets/images/pexels-lisa-fotios-small.jpg" alt="man at desk with two computer screens">
             <h1 id="name">Wyatt Brendle</h1>
         </picture>
-
     </div>
     <div class="about-me">
         <h2>About Me</h2>
@@ -153,31 +152,34 @@
             </div>
         </div>
     </div>
-    <div class="contact-me">
-        <div class="contact-container">
-            <h2>Contact Me</h2>
-            <div class="contact-text">
-                <p class="reach-out"><strong>Please get in touch if you think our work could be mutually beneficial!</strong></p>
-                <p>1234 Address Road <br> 
-                Addresstown, State, 12345</p>
-                <p>123-456-7890<br>
-                notrealemail@email.com</p>
-            </div>
-            <div class="icon-container">
-                <a href="https://github.com/wwyattbrendle">
-                    <img src="./assets/icons/github-original.svg" alt="" class="icon">
-                </a>
-                <a href="https://linkedin.com">
-                    <img src="./assets/icons/linkedin-original - black.svg" alt="" class="icon">
-                </a>
-                <a href="twitter.com">
-                    <img src="./assets/icons/twitter-original - black.svg" alt="" class="icon">
-                </a>
+    <div class="contact-wrapper">
+        <div class="contact-me">
+            <div class="contact-container">
+                <h2>Contact Me</h2>
+                <div class="contact-text">
+                    <p class="reach-out"><strong>Please get in touch if you think our work could be mutually beneficial!</strong></p>
+                    <p>1234 Address Road <br> 
+                    Addresstown, State, 12345</p>
+                    <p>123-456-7890<br>
+                    notrealemail@email.com</p>
+                </div>
+                <div class="icon-container">
+                    <a href="https://github.com/wwyattbrendle">
+                        <img src="./assets/icons/github-original.svg" alt="" class="icon">
+                    </a>
+                    <a href="https://linkedin.com">
+                        <img src="./assets/icons/linkedin-original - black.svg" alt="" class="icon">
+                    </a>
+                    <a href="twitter.com">
+                        <img src="./assets/icons/twitter-original - black.svg" alt="" class="icon">
+                    </a>
+                </div>
             </div>
         </div>
+        <div class="contact-img">
+            <img class="contact-me-img" src="./assets/images/contact-img.jpg" alt="#">
+        </div>
     </div>
-    <div class="contact-img">
-        <img class="contact-me-img" src="./assets/images/business-man.jpg" alt="#">
-    </div>
+    
 </body>
 </html>
