completed tablet view for now

--- a/index.html
+++ b/index.html
@@ -7,32 +7,35 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div class="hero">
-        <picture>
-            <source media="(min-width: 1024px)"
-                    srcset="./assets/images/pexels-lisa-fotios-large.jpg">
-            <source media="(min-width: 640px)"
-                    srcset="./assets/images/pexels-lisa-fotios-medium.jpg">
-            <source srcset="./assets/images/pexels-lisa-fotios-small.jpg">
-            <img class="hero-img" src="./assets/images/pexels-lisa-fotios-small.jpg" alt="man at desk with two computer screens">
-            <h1 id="name">Wyatt Brendle</h1>
-        </picture>
-    </div>
-    <div class="about-me">
-        <h2>About Me</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non amet, fugit odio perferendis nam molestias quos quod labore laboriosam quae tempora perspiciatis saepe debitis minima numquam illo nostrum repellendus sit harum rem veritatis animi eius?</p>
-        <div class="icon-container">
-            <a href="https://github.com/wwyattbrendle">
-                <img src="./assets/icons/github-original.svg" alt="" class="icon">
-            </a>
-            <a href="https://linkedin.com">
-                <img src="./assets/icons/linkedin-original.svg" alt="" class="icon">
-            </a>
-            <a href="twitter.com">
-                <img src="./assets/icons/twitter-original.svg" alt="" class="icon">
-            </a>
+    <div class="main">
+        <div class="hero">
+            <picture>
+                <source media="(min-width: 1024px)"
+                        srcset="./assets/images/pexels-lisa-fotios-large.jpg">
+                <source media="(min-width: 640px)"
+                        srcset="./assets/images/pexels-lisa-fotios-medium.jpg">
+                <source srcset="./assets/images/pexels-lisa-fotios-small.jpg">
+                <img class="hero-img" src="./assets/images/pexels-lisa-fotios-small.jpg" alt="man at desk with two computer screens">
+                <h1 id="name">Wyatt Brendle</h1>
+            </picture>
+        </div>
+        <div class="about-me">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non amet, fugit odio perferendis nam molestias quos quod labore laboriosam quae tempora perspiciatis saepe debitis minima numquam illo nostrum repellendus sit harum rem veritatis animi eius?</p>
+            <div class="icon-container">
+                <a href="https://github.com/wwyattbrendle">
+                    <img src="./assets/icons/github-original.svg" alt="" class="icon">
+                </a>
+                <a href="https://linkedin.com">
+                    <img src="./assets/icons/linkedin-original.svg" alt="" class="icon">
+                </a>
+                <a href="twitter.com">
+                    <img src="./assets/icons/twitter-original.svg" alt="" class="icon">
+                </a>
+            </div>
         </div>
     </div>
+
     <div class="work">
         <h2>My Work</h2>
         <div id="projects-container">
