Added to desktop display all thats left is fixing the top

--- a/index.html
+++ b/index.html
@@ -7,182 +7,183 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div class="main">
-        <div class="hero">
-            <picture>
-                <source media="(min-width: 1024px)"
-                        srcset="./assets/images/pexels-lisa-fotios-large.jpg">
-                <source media="(min-width: 640px)"
-                        srcset="./assets/images/pexels-lisa-fotios-medium.jpg">
-                <source srcset="./assets/images/pexels-lisa-fotios-small.jpg">
-                <img class="hero-img" src="./assets/images/pexels-lisa-fotios-small.jpg" alt="man at desk with two computer screens">
-                <h1 id="name">Wyatt Brendle</h1>
-            </picture>
-        </div>
-        <div class="about-me">
-            <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non amet, fugit odio perferendis nam molestias quos quod labore laboriosam quae tempora perspiciatis saepe debitis minima numquam illo nostrum repellendus sit harum rem veritatis animi eius?</p>
-            <div class="icon-container">
-                <a href="https://github.com/wwyattbrendle">
-                    <img src="./assets/icons/github-original.svg" alt="" class="icon">
-                </a>
-                <a href="https://linkedin.com">
-                    <img src="./assets/icons/linkedin-original.svg" alt="" class="icon">
-                </a>
-                <a href="twitter.com">
-                    <img src="./assets/icons/twitter-original.svg" alt="" class="icon">
-                </a>
+    <div class="wrapper">
+        <div class="main">
+            <div class="hero">
+                <picture>
+                    <source media="(min-width: 1024px)"
+                            srcset="./assets/images/pexels-lisa-fotios-large.jpg">
+                    <source media="(min-width: 640px)"
+                            srcset="./assets/images/pexels-lisa-fotios-medium.jpg">
+                    <source srcset="./assets/images/pexels-lisa-fotios-small.jpg">
+                    <img class="hero-img" src="./assets/images/pexels-lisa-fotios-small.jpg" alt="man at desk with two computer screens">
+                    <h1 id="name">Wyatt Brendle</h1>
+                </picture>
             </div>
-        </div>
-    </div>
-
-    <div class="work">
-        <h2>My Work</h2>
-        <div id="projects-container">
-            <div class="project">
-                <img class="project-img" src="./assets/images/matrix.jpg" alt="">
-                <div class="p-content">
-                    <h3 class="project-title">Project Name</h3>
-                    <p>Short description of the project.  Just a couple of sentences will do.</p>
-                    <ul class="project-links">
-                        <li class="list-link">
-                            <a class="fake-span headers" href="#">Live Preview
-                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
-                            </a>    
-                        </li>
-                        <li class="list-link">
-                            <a class="fake-span headers" href="#">View Code
-                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="project">
-                <img class="project-img" src="./assets/images/matrix.jpg" alt="">
-                <div class="p-content">
-                    <h3 class="project-title">Project Name</h3>
-                    <p>Short description of the project.  Just a couple of sentences will do.</p>
-                    <ul class="project-links">
-                        <li class="list-link">
-                            <a class="fake-span headers" href="#">Live Preview
-                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
-                            </a>    
-                        </li>
-                        <li class="list-link">
-                            <a class="fake-span headers" href="#">View Code
-                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="project">
-                <img class="project-img" src="./assets/images/matrix.jpg" alt="">
-                <div class="p-content">
-                    <h3 class="project-title">Project Name</h3>
-                    <p>Short description of the project.  Just a couple of sentences will do.</p>
-                    <ul class="project-links">
-                        <li class="list-link">
-                            <a class="fake-span headers" href="#">Live Preview
-                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
-                            </a>    
-                        </li>
-                        <li class="list-link">
-                            <a class="fake-span headers" href="#">View Code
-                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="project">
-                <img class="project-img" src="./assets/images/matrix.jpg" alt="">
-                <div class="p-content">
-                    <h3 class="project-title">Project Name</h3>
-                    <p>Short description of the project.  Just a couple of sentences will do.</p>
-                    <ul class="project-links">
-                        <li class="list-link">
-                            <a class="fake-span headers" href="#">Live Preview
-                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
-                            </a>    
-                        </li>
-                        <li class="list-link">
-                            <a class="fake-span headers" href="#">View Code
-                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="project">
-                <img class="project-img" src="./assets/images/matrix.jpg" alt="">
-                <div class="p-content">
-                    <h3 class="project-title">Project Name</h3>
-                    <p>Short description of the project.  Just a couple of sentences will do.</p>
-                    <ul class="project-links">
-                        <li class="list-link">
-                            <a class="fake-span headers" href="#">Live Preview
-                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
-                            </a>    
-                        </li>
-                        <li class="list-link">
-                            <a class="fake-span headers" href="#">View Code
-                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="project">
-                <img class="project-img" src="./assets/images/matrix.jpg" alt="">
-                <div class="p-content">
-                    <h3 class="project-title">Project Name</h3>
-                    <p>Short description of the project.  Just a couple of sentences will do.</p>
-                    <ul class="project-links">
-                        <li class="list-link">
-                            <a class="fake-span headers" href="#">Live Preview
-                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
-                            </a>    
-                        </li>
-                        <li class="list-link">
-                            <a class="fake-span headers" href="#">View Code
-                                <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="contact-wrapper">
-        <div class="contact-me">
-            <div class="contact-container">
-                <h2>Contact Me</h2>
-                <div class="contact-text">
-                    <p class="reach-out"><strong>Please get in touch if you think our work could be mutually beneficial!</strong></p>
-                    <p>1234 Address Road <br> 
-                    Addresstown, State, 12345</p>
-                    <p>123-456-7890<br>
-                    notrealemail@email.com</p>
-                </div>
-                <div class="icon-container">
+            <div class="about-me">
+                <h2>About Me</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non amet, fugit odio perferendis nam molestias quos quod labore laboriosam quae tempora perspiciatis saepe debitis minima numquam illo nostrum repellendus sit harum rem veritatis animi eius?</p>
+                <div class="icon-container top">
                     <a href="https://github.com/wwyattbrendle">
                         <img src="./assets/icons/github-original.svg" alt="" class="icon">
                     </a>
                     <a href="https://linkedin.com">
-                        <img src="./assets/icons/linkedin-original - black.svg" alt="" class="icon">
+                        <img src="./assets/icons/linkedin-original.svg" alt="" class="icon">
                     </a>
                     <a href="twitter.com">
-                        <img src="./assets/icons/twitter-original - black.svg" alt="" class="icon">
+                        <img src="./assets/icons/twitter-original.svg" alt="" class="icon">
                     </a>
                 </div>
             </div>
         </div>
-        <div class="contact-img">
-            <img class="contact-me-img" src="./assets/images/contact-img.jpg" alt="#">
-        </div>
-    </div>
     
+        <div class="work">
+            <h2>My Work</h2>
+            <div id="projects-container">
+                <div class="project">
+                    <img class="project-img" src="./assets/images/matrix.jpg" alt="">
+                    <div class="p-content">
+                        <h3 class="project-title">Project Name</h3>
+                        <p>Short description of the project.  Just a couple of sentences will do.</p>
+                        <ul class="project-links">
+                            <li class="list-link">
+                                <a class="fake-span headers" href="#">Live Preview
+                                    <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                                </a>    
+                            </li>
+                            <li class="list-link">
+                                <a class="fake-span headers" href="#">View Code
+                                    <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="project">
+                    <img class="project-img" src="./assets/images/matrix.jpg" alt="">
+                    <div class="p-content">
+                        <h3 class="project-title">Project Name</h3>
+                        <p>Short description of the project.  Just a couple of sentences will do.</p>
+                        <ul class="project-links">
+                            <li class="list-link">
+                                <a class="fake-span headers" href="#">Live Preview
+                                    <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                                </a>    
+                            </li>
+                            <li class="list-link">
+                                <a class="fake-span headers" href="#">View Code
+                                    <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="project">
+                    <img class="project-img" src="./assets/images/matrix.jpg" alt="">
+                    <div class="p-content">
+                        <h3 class="project-title">Project Name</h3>
+                        <p>Short description of the project.  Just a couple of sentences will do.</p>
+                        <ul class="project-links">
+                            <li class="list-link">
+                                <a class="fake-span headers" href="#">Live Preview
+                                    <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                                </a>    
+                            </li>
+                            <li class="list-link">
+                                <a class="fake-span headers" href="#">View Code
+                                    <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="project">
+                    <img class="project-img" src="./assets/images/matrix.jpg" alt="">
+                    <div class="p-content">
+                        <h3 class="project-title">Project Name</h3>
+                        <p>Short description of the project.  Just a couple of sentences will do.</p>
+                        <ul class="project-links">
+                            <li class="list-link">
+                                <a class="fake-span headers" href="#">Live Preview
+                                    <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                                </a>    
+                            </li>
+                            <li class="list-link">
+                                <a class="fake-span headers" href="#">View Code
+                                    <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="project">
+                    <img class="project-img" src="./assets/images/matrix.jpg" alt="">
+                    <div class="p-content">
+                        <h3 class="project-title">Project Name</h3>
+                        <p>Short description of the project.  Just a couple of sentences will do.</p>
+                        <ul class="project-links">
+                            <li class="list-link">
+                                <a class="fake-span headers" href="#">Live Preview
+                                    <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                                </a>    
+                            </li>
+                            <li class="list-link">
+                                <a class="fake-span headers" href="#">View Code
+                                    <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="project">
+                    <img class="project-img" src="./assets/images/matrix.jpg" alt="">
+                    <div class="p-content">
+                        <h3 class="project-title">Project Name</h3>
+                        <p>Short description of the project.  Just a couple of sentences will do.</p>
+                        <ul class="project-links">
+                            <li class="list-link">
+                                <a class="fake-span headers" href="#">Live Preview
+                                    <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                                </a>    
+                            </li>
+                            <li class="list-link">
+                                <a class="fake-span headers" href="#">View Code
+                                    <img class="arrow" src="./assets/icons/arrow-top-right.svg" alt="">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="contact-wrapper">
+            <div class="contact-me">
+                <div class="contact-container">
+                    <h2>Contact Me</h2>
+                    <div class="contact-text">
+                        <p class="reach-out"><strong>Please get in touch if you think our work could be mutually beneficial!</strong></p>
+                        <p>1234 Address Road <br> 
+                        Addresstown, State, 12345</p>
+                        <p>123-456-7890<br>
+                        notrealemail@email.com</p>
+                    </div>
+                    <div class="icon-container bottom">
+                        <a href="https://github.com/wwyattbrendle">
+                            <img src="./assets/icons/github-original.svg" alt="" class="icon">
+                        </a>
+                        <a href="https://linkedin.com">
+                            <img src="./assets/icons/linkedin-original - black.svg" alt="" class="icon">
+                        </a>
+                        <a href="twitter.com">
+                            <img src="./assets/icons/twitter-original - black.svg" alt="" class="icon">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="contact-img">
+                <img class="contact-me-img" src="./assets/images/contact-img.jpg" alt="#">
+            </div>
+        </div>
+    </div> 
 </body>
 </html>
